tests/node_modules_without_json/node_modules_without_json.exp
Error -------------------------------------------------------------------------------- node_modules/bar/package.json:1:1

Unexpected identifier

   1| This invalid JSON file should still be picked up even though .json isn't in
      ^^^^



Found 1 error
